# tasty-schwab-trader-BE

./: .env  .gitignore  MSTR_supertrend.csv  README.md  SUPERTREND_INTEGRATION_SUMMARY.md  app.py  backtest_cache.json  backtest_positions.json  config.py  demo_supertrend_integration.py  discovery_av.py  discovery_greeks.py  discovery_massive.py  discovery_option_aggs.py  discovery_public.py  dynamic_ic_strategy.py  ema_strategy.py  events.py  gamma_rwr_engine.py  gamma_rwr_filters.py  get_historical_data.py  inspect_public_contract.py  main_equities.py  manual_spx_trigger.py  pre_trade_evaluator.py  public_chain_service.py  public_debug.py  public_minimal_test.py  pyproject.toml  replay_producer.py  requirements.txt  run_tastytrade_update.py  rwr_alert_manager.py  simple_spread_screener.py  smart_spread_screener.py  strategy_consumer.py  supertrend_strategy.py  tastytrade.py  tastytrade_instruments.csv  test_public_auth.py  (+6 more)
brokers/: schwab.py  tastytrade.py
consts/: symbol.json  trend_line.json
credentials/: admin_credentials.json
docker/redis/: Dockerfile
schwab/: __init__.py  client.py
settings/: dynamic_ic_data.json  ema_ticker_data.json  super_ticker_data.json  ticker_data.json  zeroday_ticker_data.json
tests/: test_gamma_alerts.py  test_gamma_engine.py  test_gamma_filters.py  test_integration.py  test_pre_trade_evaluator.py  test_rwr_e2e.py  test_schwab_sync.py  test_simple_spread_screener.py
tokens/: access_token.txt  refresh_token.txt  schwab_tokens.txt  tastytrade_access_token.txt  tastytrade_tokens.txt
trades/: ema_ES.json  ema_MES.json
